add list custumer func
