# exam_api/api/docs/swagger.json
@@ -102,6 +102,29 @@
                 }
             }
         },
+        "/v1/custumer/getList": {
+            "get": {
+                "description": "this api get custumers",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Custumer"
+                ],
+                "summary": "Get only custumers api",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/custumer.CustumerAll"
+                        }
+                    }
+                }
+            }
+        },
         "/v1/custumer/update": {
             "post": {
                 "description": "this api update custumer",
@@ -453,6 +476,17 @@
                 },
                 "street": {
                     "type": "string"
+                }
+            }
+        },
+        "custumer.CustumerAll": {
+            "type": "object",
+            "properties": {
+                "allCustum": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/custumer.CustumerInfo"
+                    }
                 }
             }
         },
